Fixed nav-menu gap.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ footer {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 20px auto;
+    margin: 100px auto;
     background-color: #ffffff;
     border-style: solid;
     border-width: 2px 2px;
@@ -52,6 +52,9 @@ footer {
     border-style: solid;
     border-width: 0px 0px 2px 0px;
     border-color:#cccccc;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .box {
@@ -147,6 +150,7 @@ a:hover {
 
 img {
     float: left;
+    margin: 0px 15px 10px 0px;
 }
 
 body {
